# emb-spy

./: .gitignore  LICENSE  MANIFEST.in  README.md  emb-spy.sublime-project  lint.py  mypy.ini  pylama.ini  pyproject.toml  pytest.ini
emb_spy/: __about__.py  __init__.py  _app_reader.py  app_dynamic_reader.py  app_plot.py  app_script.py  app_static.py  app_static_reader.py  app_swo.py  backend.py  demangle.py  elf.py  pc_sampler.py
emb_spy/analyzer/: .gitignore
emb_spy/analyzer/analyzer/: __init__.py  _read_bits.py  _report_clock_enable_stm32.py  _report_core_arm.py  _report_gpio_stm32.py  _report_mpu_arm.py  _report_nvic_stm32.py  _report_systick_stm32.py
emb_spy/analyzer/analyzer_stm32f051/: __init__.py  _bits_config.py  _report_clock.py  _report_clock_enable.py  _report_gpio.py  _report_nvic.py  _report_usart.py  _state.py
emb_spy/analyzer/analyzer_stm32f745/: __init__.py  _bits_config.py  _report_clock.py  _report_gpio.py  _report_nvic.py  _state.py
emb_spy/analyzer/analyzer_stm32h743/: __init__.py  _bits_config.py  _report_adc.py  _report_advanced_control_timers.py  _report_basic_timers.py  _report_clock.py  _report_clock_enable.py  _report_dac.py  _report_dma.py  _report_dma_mux.py  _report_gpio.py  _report_hrtim.py  _report_quadspi.py  _state.py
emb_spy/elf/: __init__.py  demangle.py  elf.py
emb_spy/mmreg/: registers_if.py
emb_spy/mmreg/arm/armv6_m/: mmreg_armv6_m.py
emb_spy/mmreg/arm/armv6_m/stm32f0/stm32f051/: __init__.py
emb_spy/mmreg/arm/armv7e_m/: __init__.py  _debug.py  _nvic.py
emb_spy/mmreg/arm/armv7e_m/stm32f7/stm32f745/: __init__.py
emb_spy/mmreg/arm/armv7e_m/stm32h7/stm32h743/: __init__.py  _pwr.py  _tim1_tim8.py  _tim2_tim3_tim4_tim5.py
emb_spy/mmreg/arm/stm32/: __init__.py  _gpio.py  _tim1_tim8.py  mmreg_stm32.py
emb_spy/reader/: _reader.py  _reader_common.py  _reader_core_reg.py  _reader_memory.py  _reader_mmap_reg.py  _reader_symbol.py  dynamic_reader.py  reader_dynamic.py  reader_static.py  static_reader.py
emb_spy/socs/: bits.py  reg.py  soc.py
emb_spy/socs/arm/armv6_m/: __init__.py  _debug.py  _nvic.py  _scb.py  _systick.py
emb_spy/socs/arm/armv6_m/stm32f0/stm32f051/: __init__.py  _rcc.py  _tim2_tim3.py  _usart.py
emb_spy/socs/arm/armv7e_m/: __init__.py  _cache.py  _debug.py  _fpu.py  _mpu.py  _nvic.py  _scb.py  _systick.py
emb_spy/socs/arm/armv7e_m/stm32f7/stm32f745/: __init__.py  _rcc.py
emb_spy/socs/arm/armv7e_m/stm32h7/stm32h743/: __init__.py  _adc.py  _bdma.py  _dac.py  _dma.py  _dma_mux.py  _hrtim.py  _i2c.py  _mdma.py  _pwr.py  _quadspi.py  _rcc.py  _syscfg.py  _system_flash.py  _tim2_tim3_tim4_tim5.py  _tim6_tim7.py
emb_spy/socs/arm/stm32/: __init__.py  _gpio.py  _tim1_tim8.py
templates/: .gitignore  armv7em_pc_sampler.py  backend_one_mcu.py  backend_two_mcu.py  elf_example.py  stm32f051_analyzer.py  stm32f051_static_reader.py  stm32f745_analyzer.py  stm32h743_analyzer.py  stm32h743_static_reader.py
tests/: app_swo_test.py  demangle_test.py  mmreg_test.py  registers_if_test.py
tests/reader/: reader_test.py
tests/socs/: bits_test.py  reg_test.py  soc_test.py  stm32f051_test.py  stm32f745_test.py  stm32h743_test.py
