# I followed this tutorial
# https://packaging.python.org/en/latest/tutorials/packaging-projects/
# for creating the package.

[project]
name = "emb_spy"
description = "Debugging framework for embedded systems."
readme = "README.md"
dynamic = [
	"version",
]
authors = [
	{name="ppbrs", email="prishchepenko.boris@gmail.com"},
]
requires-python = ">=3.10"
dependencies = [
	"mdutils == 1.6.0",
	"pyelftools >= 0.31",
	"psutil",
]

# For a complete list of classifiers, see https://pypi.org/classifiers/.
classifiers = [
	"Programming Language :: Python :: 3",
	"License :: OSI Approved :: MIT License",
	"Operating System :: OS Independent",
]

# [build-system] declares which build backend to use - a library that takes a source tree
# and builds a source distribution (*.tar.gz) or wheel (*.whl) from it.
# Examples:
# 	hatchling (https://packaging.python.org/en/latest/key_projects/#setuptools)
# 		https://pypi.org/project/hatchling/
# 	setuptools (https://packaging.python.org/en/latest/key_projects/#setuptools)
# 		https://pypi.org/project/setuptools/
# Also [build-system] allows declaring which dependencies are needed to build the project,
# see `requires`.
[build-system]
requires = ["hatchling>=1.18.0"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "emb_spy/__about__.py"

[project.urls]
"Homepage" = "https://github.com/ppbrs/emb-spy"
"Bug Tracker" = "https://github.com/ppbrs/emb-spy/issues"

# ==================================================================================================
# pytest configuration
# ==================================================================================================
[tool.pytest.ini_options]
# Having pytest look for all files instead of "test_*.py" only:
python_files = "*.py"

# Logging level for failed tests:
log_level = "DEBUG"
log_date_format = "%H:%M:%S"
log_format = "%(asctime)s.%(msecs)03d %(levelname)s %(funcName)s: %(message)s"

# Logging level for real-time output:
log_cli = "True"
log_cli_level = "INFO"

# ==================================================================================================
# Ruff
# ==================================================================================================
[tool.ruff]
line-length = 100

[tool.ruff.format]
# https://docs.astral.sh/ruff/formatter/

# Use double quotes for strings.
quote-style = "double"
# Indent with spaces, rather than tabs.
indent-style = "space"

# ==================================================================================================
# isort
# ==================================================================================================
[tool.isort]
# See all isort options: https://pycqa.github.io/isort/docs/configuration/options.html
line_length = 100
wrap_length = 100

# Personally, I find this option the best. It allows faster debugging and leaving comments
# for a particular import.
force_single_line = "True"

# ==================================================================================================
# pylint
# ==================================================================================================
[tool.pylint]

# ==================================================================================================
# mypy
# ==================================================================================================
[tool.mypy]

# ==================================================================================================
# pyright
# ==================================================================================================
[tool.pyright]

include = ["emb_spy"]
exclude = []

pythonVersion = "3.12"
pythonPlatform = "Linux"
