# For creating the package, I followed these tutorials:
# 	https://packaging.python.org/en/latest/tutorials/packaging-projects/
# 	https://packaging.python.org/en/latest/guides/writing-pyproject-toml/

[project]
name = "emb_spy"
description = "Debugging framework for embedded systems."
readme = "README.md"
dynamic = [
	"version",
]
authors = [
	{name="ppbrs", email="prishchepenko.boris@gmail.com"},
]
requires-python = ">=3.10"
dependencies = [
	"mdutils == 1.6.0",
]

# For a complete list of classifiers, see https://pypi.org/classifiers/.
classifiers = [
	"Programming Language :: Python :: 3",
	"License :: OSI Approved :: MIT License",
	"Operating System :: OS Independent",
]

# [build-system] declares which build backend to use - a library that takes a source tree
# and builds a source distribution (*.tar.gz) or wheel (*.whl) from it.
# Examples:
# 	hatchling (https://packaging.python.org/en/latest/key_projects/#setuptools)
# 		https://pypi.org/project/hatchling/
# 	setuptools (https://packaging.python.org/en/latest/key_projects/#setuptools)
# 		https://pypi.org/project/setuptools/
# Also [build-system] allows declaring which dependencies are needed to build the project,
# see `requires`.
[build-system]
requires = ["hatchling>=1.18.0"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "emb_spy/__about__.py"

[project.urls]
"Homepage" = "https://github.com/ppbrs/emb-spy"
"Bug Tracker" = "https://github.com/ppbrs/emb-spy/issues"

[tool.isort]
# See all isort options: https://pycqa.github.io/isort/docs/configuration/options.html
line_length = 100
wrap_length = 100

# Personally, I find this option the best. It allows faster debugging and leaving comments
# for a particular import.
force_single_line = "True"
